Wed  Dec 11 2002	H. Wade Minter (minter@lunenburg.org)
     * Use a progress bar to show the status of the initial time
       conversion.

Tue  Dec 10 2002	H. Wade Minter (minter@lunenburg.org)
     * Put in code to check if the database is at 1.7 levels, and if
       it's not, convert the database.

Tue  Dec  3 2002	H. Wade Minter (minter@lunenburg.org)
     * Store the song length time in the database now.  This speeds
       up searches to an absurd rate.

Wed  Nov 13 2002	H. Wade Minter (minter@lunenburg.org)
     * Removed the "Assign Hotkey" button from the bottom of the main
       window.  Apparently nobody was using it anyway.
     * Relocated the Stop button to the bottom-right corner.

Tue  Nov 12 2002	H. Wade Minter (minter@lunenburg.org)
     * Changed the status bar display for playing a song from
       the filename to a title/artist view.

Sat  Nov  9 2002        H. Wade Minter (minter@lunenburg.org)
     * Changed the Drag and Drop code to display an icon when
       dragging a song, instead of the title.

Thu  Nov  7 2002	H. Wade Minter (minter@lunenburg.org)
     * Added a "dump database" option from the File menu.
     * Added an "import database dumpfile" option from the File menu.
     * Other minor cosmetic fixes.

Wed  Nov  6 2002	H. Wade Minter (minter@lunenburg.org)
     * Made a change so that when you load hotkeys, the hotkey
       box will display.  Bugzilla ID #10

Sat  Nov  2 2002        H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug I introduced that would lead to the $filepath
       variable getting overwritten.

Fri  Nov  1 2002	H. Wade Minter (minter@lunenburg.org)
     * Auto-populate on Oggs, too.

Mon  Oct 21 2002	H. Wade Minter (minter@lunenburg.org)
     * Auto-populate the Title/Artist if the ID3 tags exist on 
       the file that you're adding.

Thu  Oct 17 2002	H. Wade Minter (minter@lunenburg.org)
     * Added support for .m3u or .pls playlist files.